--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
 
   <body>
@@ -12,18 +19,23 @@
       <div class="wrapper">
         <div class="form-area">
           <form action="">
-                <img src="./logo.png" class="logo" />
+            <img src="./logo.png" class="logo" />
             <div>
               <h3 class="title">HELLO & WELLCOME</h3>
             </div>
             <div class="input-area">
               <div class="input-field">
-                <label>Email</label>
-                <input type="text" placeholder="Enter Your Email" />
+                <label for="email-field">Email</label>
+                <input type="text" placeholder="Enter Your Email" id="email-field" />
               </div>
               <div class="input-field">
-                <label>Password</label>
-                <input type="password" placeholder="Enter Your Password" />
+                <label for="pass-field">Password</label>
+                <div class="password-field">
+                  <input type="password" placeholder="Enter Your Password" id="pass-field" />
+                  <button id="password-show" type="button">
+                    <i class="fa-solid fa-eye"></i>
+                  </button>
+                </div>
                 <a href="" class="forgot">Forgot Password ?</a>
               </div>
               <button class="btn" type="submit">Login</button>
@@ -34,5 +46,6 @@
         <!-- <div class="info-area"></div> -->
       </div>
     </main>
+    <script src="./script.js"></script>
   </body>
 </html>
